--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body {margin:0;}
 
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 a{
     text-decoration:none;
 }
@@ -8,11 +13,9 @@ header{
     display: inline-block;
     width: 100%;
     border-bottom: 2px solid purple;
-    padding: 10px;
-}
-
-header a img{
-   
+    
+    top: 0;
+    bottom:0;
 }
 
 header .icon {
@@ -21,9 +24,11 @@ header .icon {
 
 nav{
     position: absolute;
-    float: right;
+    right:40px;
+    /*float: right;*/
     padding-top: 14px;
     margin-right: 5px;
+    background-color: white;
 }
 
 .container {
@@ -126,16 +131,52 @@ nav a:hover, .dropdown:hover .dropbtn {
 
 /*Termina header*/
 /*SlideShow*/
-.slideShow{
-    margin: 0 auto;
-}
 
 /*Main*/
+main{
+    margin: auto;
+    width: 60%; /*Mudar para o tamanho das fotos em cada tipo de ecra*/
+    margin-top: -4px;
+}
 
 /*Tratamentos*/
-#trat *{
-    margin: 0;
+#trat{
+    margin-top: -5px;
     padding:0px;
+    
+}
+
+.tab{
+    margin-left: 20px;
+}
+
+.tab button{
+    padding: 5px;
+    border: 0;
+    background-color:transparent
+}
+
+.tab button:hover{
+    background-color: black;
+}
+
+.tabH{
+    margin-left: -4px;
+}
+
+.tratH, .tratS{
+    margin-top: 0px;
+}
+
+.tratH{
+    width:100%;
+    display:none;
+}
+
+.tratS{
+    width:100%;
+    display:inline-block;
+    
 }
 
 .tratH, .tabH.active , .tabH.active:hover{
@@ -149,23 +190,19 @@ nav a:hover, .dropdown:hover .dropbtn {
     list-style: none;
 }
 
-.tab button{
-    margin: 0;
-    border: 0;
-    background-color:transparent
+.uniTrat{
+    float: left;
+    border-right: 1px solid white;
+    border-bottom:  1px solid white;
+    border-left:  1px solid white;
+    height: 190px;
+    text-align: center;
+    padding: 20px;
 }
 
-.tab button:hover{
-    background-color: black;
-}
 
-.tratH{
-    display:none;
-}
 
-.tratS{
-    display:block;
-}
+
 /*Promocoes*/
 /*Testemunhos*/
 /*Agendar*/
